# crux-lang

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  LICENSE.md  README.md  chunk.c  chunk.h  common.h  compiler.c  compiler.h  debug.c  debug.h  file_handler.c  file_handler.h  grammar.md  grammar.txt  main.c  memory.c  memory.h  object.c  object.h  panic.c  panic.h  readme.md  repro.crux  scanner.c  scanner.h  table.c  table.h  value.c  value.h  vm.c  vm.h
.github/workflows/: deploy.yml  release.yml  run_test.yml
NativeFunctions/: error.c
NativeTypes/: string.c  string.h  types.c
benchmarks/: anonymous_bench.stl  array_bench.stella  bench1.st  collapsed.st  compound_bench.stella  concatenation_bench.stl  errors_bench.stl  list_bench.st  list_bench.stella  loop_bench.stl  method_bench.stel  multiple_assignment_bench.stl  table_bench.stel  table_bench.stl  test.stel  test.stella  tuple_return_bench.stella  tuple_return_bench.stl
docs/: astro.config.mjs  package-lock.json  package.json
docs/.github/workflows/: deploy.yml
docs/src/components/: ArrowLeftUp.astro  ArrowRight.astro  CodeBlock.astro  Footer.astro  Logo.astro  Navbar.astro  Sidebar.astro  Welcome.astro  Wrapper.astro
docs/src/layouts/: DocumentationLayout.astro  Layout.astro
docs/src/pages/: docs.astro  getting-started.astro  index.astro
docs/src/pages/docs/: built-in-functions.astro  classes-and-objects.astro  control-flow.astro  data-structures.astro  functions.astro  variables-and-data-types.astro
docs/src/pages/getting-started/: installation.astro
docs/src/styles/: global.css
examples/: event_demo.crux
include/: alloc.h  chunk.h  common.h  compiler.h  debug.h  file_handler.h  garbage_collector.h  memory.h  object.h  panic.h  scanner.h  slab_allocator.h  table.h  type_checker.h  type_system.h  value.h  vm.h  vm_helpers.h
include/compiler/: ast.h  ast_compiler.h
include/stdlib/: array.h  buffer.h  complex.h  core.h  error.h  event.h  fs.h  gc.h  io.h  math.h  matrix.h  option.h  random.h  range.h  result.h  set.h  std.h  stdlib.h  string.h  sys.h  tables.h  term.h  time.h  tuple.h  vectors.h
include/vm/: vm.h  vm_helpers.h  vm_run.h
natives/: collections.c  collections.h  error.c  error.h  io.c  io.h  stl_time.c  time.c  time.h
src/: CMakeLists.txt  chunk.c  chunk.h  common.h  compiler.c  compiler.h  debug.c  debug.h  file_handler.c  file_handler.h  main.c  memory.c  memory.h  object.c  object.h  panic.c  panic.h  scanner.c  scanner.h  table.c  table.h  type_system.c  value.c  value.h  vm.c  vm.h
src/compiler/: ast.c  ast_compiler.c  codegen.c  compiler.c  compiler_helpers.c  type_checker.c
src/memory/: alloc.c  garbage_collector.c  slab_allocator.c
src/std/: array.c  array.h  collections.c  collections.h  core.c  core.h  error.c  error.h  fs.c  fs.h  io.c  io.h  math.c  math.h  random.c  random.h  std.c  std.h  stl_io.c  stl_io.h  stl_math.c  stl_math.h  stl_time.c  stl_time.h  string.c  string.h  sys.c  sys.h  tables.c  tables.h  time.c  time.h  vectors.c  vectors.h
src/stdlib/: array.c  buffer.c  complex.c  core.c  error.c  event.c  fs.c  gc.c  io.c  math.c  matrix.c  option.c  random.c  range.c  result.c  set.c  std.c  stdlib.c  string.c  sys.c  tables.c  term.c  time.c  tuple.c  vectors.c
src/tests/: assert.stl  match_test.stella  type_cast.stl  typeof.stl
src/vm/: vm.h  vm_helpers.c  vm_helpers.h  vm_run.c  vm_run.h
std/: array.c  array.h  collections.c  collections.h  error.c  error.h  io.c  io.h  std.c  std.h  stl_io.c  stl_io.h  stl_math.c  stl_math.h  stl_time.c  stl_time.h  string.c  string.h  table.c  tables.c  tables.h  types.c  types.h
tests/: assert.crux  bench.stl  buggy.crux  string_methods.crux  test_runner.py  typeof.crux
tests/benchmarks/: analyze_gc.R  cpu_stress.crux  fib.crux  gc_harness.py  mandelbrot.crux  munchausen.crux  ray_tracer.crux  render.ppm  stained.crux  string_processing.crux  terrain_gen.crux  xor_ai.crux
tests/builtins/: assert.crux  type_cast.crux  type_function.crux
tests/compiler/: basic_types.crux  flow_typing.crux  shapes.crux
tests/features/: break.crux  classes.crux  collection_literals.crux  compound_ops.crux  continue.crux  for.crux  for_in.crux  functions.crux  impl.crux  match.crux  range_literals.crux  result_option_methods.crux  structs.crux  structs2.crux  structs3.crux  typeof.crux  user_iterators.crux  while.crux
tests/importing/: ext_mod.crux  main.crux
tests/modules/: array.crux  buffer.crux  complex.crux  event.crux  fs.crux  gc.crux  io.crux  math.crux  matrix.crux  random.crux  range.crux  set.crux  string.crux  sys.crux  table.crux  term.crux  time.crux  tuple.crux  vectors.crux
tests/type_methods/: string_methods.crux
